# contact_graspnet

./: .gitignore  download_checkpoints_data.sh  pyproject.toml  requirements.txt
checkpoints/: download_checkpoints.sh
contact_graspnet/: config.yaml  contact_grasp_estimator.py  tf_train_ops.py
test_data/: download_test_data.sh
